--- a/Form/0.md
+++ b/Form/0.md
@@ -69,11 +69,11 @@ Sec.Ti=TERMS AND CONDITIONS
 
 2.3.1.Ti=EULA’s
 
-2.3.1.sec=Distributor shall not distribute the Value-Added Product to any End-Customer that does not first execute a written end user license agreement (“EULA”) that: (a) forbids distribution of the Licensed Software, service bureau or time-sharing use of the Licensed Software, or other exploitation of the Licensed Software, except internal use and reproduction as an integrated component of the Value-Added Product, to the extent specifically authorized by such EULA; (b) restricts use of the Licensed Software to the same extent as, or more than, Section {2.2.Xnum} above (Licensed Software Restrictions); (c) provides for audits, with terms no less restrictive than those of Article 9.Xnum} below (Licensed Software Audit); (d) requires that such End-Customer cease using and delete all copies of the Licensed Software after termination of such EULA; (e) restricts export pursuant to the provisions of Section {14.12.Xnum} below (Technology Export); and (f) provides that Provider may enforce the EULA as an intended third party beneficiary of the provisions listed in this sentence. The EULA may set forth the restrictions of the preceding sentence as restrictions on the Value-Added Product itself if the Licensed Software is not separately defined.
+2.3.1.sec=Distributor shall not distribute the Value-Added Product to any End-Customer that does not first execute a written end user license agreement (“EULA”) that: (a) forbids distribution of the Licensed Software, service bureau or time-sharing use of the Licensed Software, or other exploitation of the Licensed Software, except internal use and reproduction as an integrated component of the Value-Added Product, to the extent specifically authorized by such EULA; (b) restricts use of the Licensed Software to the same extent as, or more than, Section {2.2.Xnum} above (Licensed Software Restrictions); (c) provides for audits, with terms no less restrictive than those of Article {9.Xnum} below (Licensed Software Audit); (d) requires that such End-Customer cease using and delete all copies of the Licensed Software after termination of such EULA; (e) restricts export pursuant to the provisions of Section {14.12.Xnum} below (Technology Export); and (f) provides that Provider may enforce the EULA as an intended third party beneficiary of the provisions listed in this sentence. The EULA may set forth the restrictions of the preceding sentence as restrictions on the Value-Added Product itself if the Licensed Software is not separately defined.
 
 2.3.2.Ti=Sub-Distributor License Agreements
 
-2.3.2.sec=Distributor shall not sublicense or distribute the Value-Added Product to any Sub-Distributor that does not first execute a written Sub-Distributor license agreement (“SDLA”) that: (a) restricts use of the Licensed Software to the same extent as, or more than, Section {2.2.Xnum} (Licensed Software Restrictions) of this Agreement; (b) incorporates the requirements of Subsection 2.3.Ti=(a) above with regard to such Sub-Distributor’s End-Customers; (c) restricts use of packaging and marketing material with Provider’s trademark’s, consistent with the restrictions of Article 3.Xnum} below; (d) provides for audits, with terms no less restrictive than those of Article 9.Xnum} (Licensed Software Audit); (e) provides Distributor the right to terminate such SDLA if this Agreement terminates, and requires that such Sub-Distributor cease distributing and using the Licensed Software, and delete all copies of the Licensed Software, after termination of such SDLA; (f) restricts export pursuant to the provisions of Section {14.12.Xnum} below (Technology Export); and (g) provides that Provider may enforce the SDLA as an intended third party beneficiary of the provisions listed in this sentence. The SDLA may set forth the restrictions of the preceding sentence as restrictions on the Value-Added Product itself if the Licensed Software is not separately defined. 
+2.3.2.sec=Distributor shall not sublicense or distribute the Value-Added Product to any Sub-Distributor that does not first execute a written Sub-Distributor license agreement (“SDLA”) that: (a) restricts use of the Licensed Software to the same extent as, or more than, Section {2.2.Xnum} (Licensed Software Restrictions) of this Agreement; (b) incorporates the requirements of Subsection 2.3.Ti=(a) above with regard to such Sub-Distributor’s End-Customers; (c) restricts use of packaging and marketing material with Provider’s trademark’s, consistent with the restrictions of Article {3.Xnum} below; (d) provides for audits, with terms no less restrictive than those of Article {9.Xnum} (Licensed Software Audit); (e) provides Distributor the right to terminate such SDLA if this Agreement terminates, and requires that such Sub-Distributor cease distributing and using the Licensed Software, and delete all copies of the Licensed Software, after termination of such SDLA; (f) restricts export pursuant to the provisions of Section {14.12.Xnum} below (Technology Export); and (g) provides that Provider may enforce the SDLA as an intended third party beneficiary of the provisions listed in this sentence. The SDLA may set forth the restrictions of the preceding sentence as restrictions on the Value-Added Product itself if the Licensed Software is not separately defined. 
 
 2.3.=[G/Z/ol-a/2]
 
@@ -107,7 +107,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 7.1.Ti=IP Rights in the Licensed Software
 
-7.1.sec=Provider retains all right, title, and interest in and to the Documentation and Licensed Software, including without limitation Upgrades, except to the extent of the limited licenses specifically set forth in Sections 2.1.Xnum} (Licenses) and 2.4.Xnum} (Documentation). Distributor recognizes that the Licensed Software and its components are protected by copyright and other laws.
+7.1.sec=Provider retains all right, title, and interest in and to the Documentation and Licensed Software, including without limitation Upgrades, except to the extent of the limited licenses specifically set forth in Sections {2.1.Xnum} (Licenses) and {2.4.Xnum} (Documentation). Distributor recognizes that the Licensed Software and its components are protected by copyright and other laws.
 
 7.2.Ti=Feedback
 
@@ -127,7 +127,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 8.3.Ti=Injunction
 
-8.3.sec=Recipient agrees that breach of this Article 8.Xnum} would cause Discloser irreparable injury, for which monetary damages would not provide adequate compensation, and that in addition to any other remedy, Discloser will be entitled to injunctive relief against such breach or threatened breach, without proving actual damage or posting a bond or other security.
+8.3.sec=Recipient agrees that breach of this Article {8.Xnum} would cause Discloser irreparable injury, for which monetary damages would not provide adequate compensation, and that in addition to any other remedy, Discloser will be entitled to injunctive relief against such breach or threatened breach, without proving actual damage or posting a bond or other security.
 
 8.4.Ti=Termination & Return
 
@@ -169,7 +169,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 10.1.2.Ti=Re IP
 
-10.1.2.sec=Provider represents and warrants that it is the owner of the Licensed System and of each and every component thereof, or the recipient of a valid license thereto, and that it has and will maintain the full power and authority to grant the intellectual property and other rights granted in this Agreement without the further consent of any third party. Provider’s representations and warranties in the preceding sentence do not apply to the extent that the infringement arises out of any of the conditions listed in Subsections 11.1.Ti=(a) through 11.1.Ti=(e) below. In the event the of breach of the warranty in this Subsection 10.1.Ti=(b), Provider shall, at its own expense, (i) secure for Distributor the right to continue exercising its rights granted in Article 2.Xnum} above (License & Delivery) or (ii) replace or modify the Licensed Software to make it noninfringing, provided such modification or replacement does not materially degrade any functionality set forth in the Specifications; provided if neither of the foregoing is practical, Provider may (iii) terminate any or all licenses granted in this Agreement. In conjunction with Section {11.1.Xnum} below (From Provider), the preceding sentence states Provider’s sole obligation and liability, and Distributor’s sole remedy, for potential or actual intellectual property infringement by the Software.
+10.1.2.sec=Provider represents and warrants that it is the owner of the Licensed System and of each and every component thereof, or the recipient of a valid license thereto, and that it has and will maintain the full power and authority to grant the intellectual property and other rights granted in this Agreement without the further consent of any third party. Provider’s representations and warranties in the preceding sentence do not apply to the extent that the infringement arises out of any of the conditions listed in Subsections 11.1.Ti=(a) through 11.1.Ti=(e) below. In the event the of breach of the warranty in this Subsection 10.1.Ti=(b), Provider shall, at its own expense, (i) secure for Distributor the right to continue exercising its rights granted in Article {2.Xnum} above (License & Delivery) or (ii) replace or modify the Licensed Software to make it noninfringing, provided such modification or replacement does not materially degrade any functionality set forth in the Specifications; provided if neither of the foregoing is practical, Provider may (iii) terminate any or all licenses granted in this Agreement. In conjunction with Section {11.1.Xnum} below (From Provider), the preceding sentence states Provider’s sole obligation and liability, and Distributor’s sole remedy, for potential or actual intellectual property infringement by the Software.
 
 10.1.3.Ti=Re Copyleft Licensed Software
 
@@ -183,7 +183,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 10.3.Ti=Warranty Disclaimers
 
-10.3.sec=Except for the express warranties in Sections 10.1.Xnum} and 10.2.Xnum} above, PROVIDER MAKES NO WARRANTIES, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION ANY IMPLIED WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE OR ANY WARRANTY REGARDING THE LICENSED SOFTWARE’S INTEGRATION OR OPERATION WITH THE VALUE-ADDED PRODUCT. Provider does not warrant that the Licensed Software will perform without error or that it will run without immaterial interruption. Provider provides no warranty regarding, and will have no responsibility for, any claim arising out of: (a) a modification of the Licensed Software made by anyone other than Provider, including without limitation any modification performed to create the Value-Added Product, unless Provider approves such modification in writing; or (b) use of the Licensed Software in combination with any operating system not authorized in the Specifications or Documentation or with hardware or software specifically forbidden by the Specifications or Documentation.
+10.3.sec=Except for the express warranties in Sections {10.1.Xnum} and {10.2.Xnum} above, PROVIDER MAKES NO WARRANTIES, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION ANY IMPLIED WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE OR ANY WARRANTY REGARDING THE LICENSED SOFTWARE’S INTEGRATION OR OPERATION WITH THE VALUE-ADDED PRODUCT. Provider does not warrant that the Licensed Software will perform without error or that it will run without immaterial interruption. Provider provides no warranty regarding, and will have no responsibility for, any claim arising out of: (a) a modification of the Licensed Software made by anyone other than Provider, including without limitation any modification performed to create the Value-Added Product, unless Provider approves such modification in writing; or (b) use of the Licensed Software in combination with any operating system not authorized in the Specifications or Documentation or with hardware or software specifically forbidden by the Specifications or Documentation.
 
 10.4.Ti=Warranties & Sub-Distributors, End-Customers
 
@@ -199,11 +199,11 @@ Sec.Ti=TERMS AND CONDITIONS
 
 11.2.Ti=From Distributor
 
-11.2.sec=Distributor shall defend and indemnify Provider and Provider’s Associates (as defined below in Section {11.3.Ti=) against any “Indemnified Claim,” meaning any third party claim, suit, or proceeding: (a) by any Sub-Distributor or End-Customer, as well as any such entity’s employee, contractor, or other end user; (b) related to the Value-Added Product; or (c) arising out of, related to, or alleging any of the actions listed in Subsections 11.1.Xnum} (a) through (e) above. Notwithstanding the foregoing, no such claim, suit, or proceeding shall be considered an Indemnified Claim pursuant to this Section {11.2.Xnum} to the extent that it arises out of, relates to, or alleges: (i) intellectual property infringement by the Licensed Software; or (ii) an injury caused by the Licensed Software’s failure to conform to its Documentation or Specifications. For the avoidance of doubt, Indemnified Claims do not include claims related to injuries to the extent caused by the Licensed Software’s failure to perform as represented by Distributor or a Sub-Distributor but not by the Documentation or Specifications.
+11.2.sec=Distributor shall defend and indemnify Provider and Provider’s Associates (as defined below in Section {11.3.Ti=) against any “Indemnified Claim,” meaning any third party claim, suit, or proceeding: (a) by any Sub-Distributor or End-Customer, as well as any such entity’s employee, contractor, or other end user; (b) related to the Value-Added Product; or (c) arising out of, related to, or alleging any of the actions listed in Subsections {11.1.Xnum} (a) through (e) above. Notwithstanding the foregoing, no such claim, suit, or proceeding shall be considered an Indemnified Claim pursuant to this Section {11.2.Xnum} to the extent that it arises out of, relates to, or alleges: (i) intellectual property infringement by the Licensed Software; or (ii) an injury caused by the Licensed Software’s failure to conform to its Documentation or Specifications. For the avoidance of doubt, Indemnified Claims do not include claims related to injuries to the extent caused by the Licensed Software’s failure to perform as represented by Distributor or a Sub-Distributor but not by the Documentation or Specifications.
 
 11.3.Ti=Litigation & Additional Terms
 
-11.3.sec=The obligations of the indemnifying party (“Indemnitor”) pursuant to Section {11.1.Xnum} or 11.2.Xnum} above: (a) include retention and payment of attorneys and payment of court costs, as well as settlement at Indemnitor’s expense and payment of judgments; and (b) will be excused to the extent that the other contracting party’s (“Indemnified Party’s”) or any of such Indemnified Party’s Associates’ failure to provide prompt notice of the Indemnified Claim or reasonably to cooperate materially prejudices the defense. Indemnitor will control the defense of any Indemnified Claim, including appeals, negotiations, and any settlement or compromise thereof; provided Indemnified Party will have the right, not to be exercised unreasonably, to reject any settlement or compromise that requires that it admit wrongdoing or liability or subjects it to any ongoing affirmative obligations. (As used in this Article 11.Ti=, a party’s “Associates” are its officers, directors, shareholders, parents, subsidiaries, agents, successors, and assigns. Distributor’s “Associates” also include Sub-Distributors and End-Customers, provided each such Sub-Distributor or End-Customer was rightfully licensed pursuant to this Agreement.)
+11.3.sec=The obligations of the indemnifying party (“Indemnitor”) pursuant to Section {11.1.Xnum} or {11.2.Xnum} above: (a) include retention and payment of attorneys and payment of court costs, as well as settlement at Indemnitor’s expense and payment of judgments; and (b) will be excused to the extent that the other contracting party’s (“Indemnified Party’s”) or any of such Indemnified Party’s Associates’ failure to provide prompt notice of the Indemnified Claim or reasonably to cooperate materially prejudices the defense. Indemnitor will control the defense of any Indemnified Claim, including appeals, negotiations, and any settlement or compromise thereof; provided Indemnified Party will have the right, not to be exercised unreasonably, to reject any settlement or compromise that requires that it admit wrongdoing or liability or subjects it to any ongoing affirmative obligations. (As used in this Article 11.Ti=, a party’s “Associates” are its officers, directors, shareholders, parents, subsidiaries, agents, successors, and assigns. Distributor’s “Associates” also include Sub-Distributors and End-Customers, provided each such Sub-Distributor or End-Customer was rightfully licensed pursuant to this Agreement.)
 
 11.=[G/Z/ol/3]
 
@@ -219,11 +219,11 @@ Sec.Ti=TERMS AND CONDITIONS
 
 12.3.Ti=Clarifications & Disclaimers
 
-12.3.sec=THE LIABILITIES LIMITED BY THIS ARTICLE 12.Xnum} APPLY: (a) TO LIABILITY FOR NEGLIGENCE; (b) REGARDLESS OF THE FORM OF ACTION, WHETHER IN CONTRACT, TORT, STRICT PRODUCT LIABILITY, OR OTHERWISE; (c) EVEN IF THE PARTY TO BE CHARGED IS ADVISED IN ADVANCE OF THE POSSIBILITY OF THE DAMAGES IN QUESTION AND EVEN IF SUCH DAMAGES WERE FORESEEABLE; AND (d) EVEN IF THE OTHER PARTY’S REMEDIES FAIL OF THEIR ESSENTIAL PURPOSE. If applicable law limits the application of the provisions of this Article 11.Ti=, the parties’ liability will be limited to the maximum extent permissible. For the avoidance of doubt, each party’s liability limits and other rights set forth in this Article 11.Xnum} apply likewise to its affiliates, licensors, suppliers, advertisers, agents, sponsors, directors, officers, employees, consultants, and other representatives.
+12.3.sec=THE LIABILITIES LIMITED BY THIS ARTICLE {12.Xnum} APPLY: (a) TO LIABILITY FOR NEGLIGENCE; (b) REGARDLESS OF THE FORM OF ACTION, WHETHER IN CONTRACT, TORT, STRICT PRODUCT LIABILITY, OR OTHERWISE; (c) EVEN IF THE PARTY TO BE CHARGED IS ADVISED IN ADVANCE OF THE POSSIBILITY OF THE DAMAGES IN QUESTION AND EVEN IF SUCH DAMAGES WERE FORESEEABLE; AND (d) EVEN IF THE OTHER PARTY’S REMEDIES FAIL OF THEIR ESSENTIAL PURPOSE. If applicable law limits the application of the provisions of this Article 11.Ti=, the parties’ liability will be limited to the maximum extent permissible. For the avoidance of doubt, each party’s liability limits and other rights set forth in this Article {11.Xnum} apply likewise to its affiliates, licensors, suppliers, advertisers, agents, sponsors, directors, officers, employees, consultants, and other representatives.
 
 12.4.Ti=Exceptions to Limitation of Liability
 
-12.4.sec=Sections 12.1.Xnum} (Dollar Cap) and 12.2.Xnum} (Exclusion of Consequential Damages) above do not apply to: (a) infringement of intellectual property; (b) breach of Section {8.2.Xnum} above (Nondisclosure); (c) obligations and liabilities pursuant to Article 11.Xnum} above (Indemnification); or (d) claims for attorneys’ fees and other litigation costs recoverable by the prevailing party in any action.
+12.4.sec=Sections {12.1.Xnum} (Dollar Cap) and {12.2.Xnum} (Exclusion of Consequential Damages) above do not apply to: (a) infringement of intellectual property; (b) breach of Section {8.2.Xnum} above (Nondisclosure); (c) obligations and liabilities pursuant to Article {11.Xnum} above (Indemnification); or (d) claims for attorneys’ fees and other litigation costs recoverable by the prevailing party in any action.
 
 12.=[G/Z/ol/4]
 
@@ -239,7 +239,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 13.3.Ti=Effects of Termination
 
-13.3.sec=Upon termination of this Agreement, Distributor shall: (a) cease all distribution use of the Value-Added Product; and (b) cease all use and reproduction of the Licensed Software except as necessary to provide support to End-Customers. The following provisions will survive termination or expiration of this Agreement: (a) any obligation of Distributor to pay royalties incurred before termination; (b) any obligation of Distributor to pay royalties on Value-Added Products distributed before termination; (b) Articles and Sections 2.2.Xnum} (Restrictions on Licensed Software Rights) 7.Xnum} (IP & Feedback), 8.Xnum} (Confidential Information), 9.Xnum} (Licensed Software Audit), 10.2.Xnum} (Warranty Disclaimers), 11.Xnum} (Indemnification), and 12.Xnum} (Limitation of Liability); and (c) any other provision of this Agreement that must survive to fulfill its essential purpose. For the avoidance of doubt, termination of this Agreement will require prompt termination of SDLA’s but not of EULA’s (both as defined in Section {2.3.Xnum} above).
+13.3.sec=Upon termination of this Agreement, Distributor shall: (a) cease all distribution use of the Value-Added Product; and (b) cease all use and reproduction of the Licensed Software except as necessary to provide support to End-Customers. The following provisions will survive termination or expiration of this Agreement: (a) any obligation of Distributor to pay royalties incurred before termination; (b) any obligation of Distributor to pay royalties on Value-Added Products distributed before termination; (b) Articles and Sections {2.2.Xnum} (Restrictions on Licensed Software Rights) {7.Xnum} (IP & Feedback), {8.Xnum} (Confidential Information), {9.Xnum} (Licensed Software Audit), {10.2.Xnum} (Warranty Disclaimers), {11.Xnum} (Indemnification), and {12.Xnum} (Limitation of Liability); and (c) any other provision of this Agreement that must survive to fulfill its essential purpose. For the avoidance of doubt, termination of this Agreement will require prompt termination of SDLA’s but not of EULA’s (both as defined in Section {2.3.Xnum} above).
 
 13.=[G/Z/ol/3]
 
@@ -275,7 +275,7 @@ Sec.Ti=TERMS AND CONDITIONS
 
 14.8.Ti=Bankruptcy Rights
 
-14.8.sec=The rights and licenses granted to Distributor in Sections 2.1.Xnum} (License) and 2.4.Xnum} (Documentation) above (collectively, the “License Provisions”) are licenses to “intellectual property” rights, as defined in Section 365(n) of the United States Bankruptcy Code (11 U.S.C. Sections 101, et seq.). If Provider is subject to any proceeding under the United States Bankruptcy Code, and Provider as debtor in possession or its trustee in bankruptcy rejects this Agreement, Distributor may, pursuant to 11 U.S.C. Section 365(n)(1) and (2), retain any and all rights granted to it under the License Provisions to the maximum extent permitted by law. This Section {14.8.Xnum} will not be construed to limit or restrict any right or remedy not set forth in this Section {14.8.Xnum}, including without limitation the right to retain any license or authority this Agreement grants pursuant to any provision other than the License Provisions.
+14.8.sec=The rights and licenses granted to Distributor in Sections {2.1.Xnum} (License) and {2.4.Xnum} (Documentation) above (collectively, the “License Provisions”) are licenses to “intellectual property” rights, as defined in Section 365(n) of the United States Bankruptcy Code (11 U.S.C. Sections 101, et seq.). If Provider is subject to any proceeding under the United States Bankruptcy Code, and Provider as debtor in possession or its trustee in bankruptcy rejects this Agreement, Distributor may, pursuant to 11 U.S.C. Section 365(n)(1) and (2), retain any and all rights granted to it under the License Provisions to the maximum extent permitted by law. This Section {14.8.Xnum} will not be construed to limit or restrict any right or remedy not set forth in this Section {14.8.Xnum}, including without limitation the right to retain any license or authority this Agreement grants pursuant to any provision other than the License Provisions.
 
 14.9.Ti=Choice of Law & Jurisdiction
 
