Adding the Annexes (form only)

--- a/Form/0.md
+++ b/Form/0.md
@@ -258,6 +258,8 @@ Conf.Period.End.cl={Conf.Period.End.DaysAfterDisclosure.#} after the date of dis
 
 14.2.2.sec=For Distributor: {Distributor.US.Notice.sec} 
 
+14.2.=[G/Z/ol-a/s2]
+
 14.3.Ti=Force Majeure
 
 14.3.sec=No delay, failure, or default, other than a failure to pay royalties when due, will constitute a breach of this Agreement to the extent caused by acts of war, terrorism, hurricanes, earthquakes, other acts of God or of nature, strikes or other labor disputes, riots or other acts of civil disorder, embargoes, or other causes beyond the performing party’s reasonable control.
@@ -331,53 +333,29 @@ By.0.sec=IN WITNESS THEREOF, the parties have executed this Agreement as of the 
 
 
 
-______________________________
 
-DISTRIBUTOR
+Annex.Sec=<h3>Attachments</h3><br><h4>ATTACHMENT A</h4><br>{Annex.Trademarks.Sec}<h4>ATTACHMENT B</h4>{Annex.SoftwareSupport.Sec}
 
-	
+Annex.Trademarks.Ti=Provider Trademarks
 
-______________________________
+Annex.Trademarks.1.Ti=Trademarks:
 
-PROVIDER
+Annex.Trademarks.1.sec=[list Provider’s licensed trademarks]
 
+Annex.Trademarks.2.Ti=Quality Standards:
 
+Annex.Trademarks.2.sec=[list quality requirements for Value-Added Requirements]
 
-	
+Annex.Trademarks.3.Ti=Trademark Usage Policy:
 
-By: _________________________________
+Annex.Trademarks.3.sec=[list Provider’s requirements for publication and other use of trademarks]
 
-	(signature)	By: _________________________________
-
-	(signature)
-
-Name: _________________________________
-
-	(print)	Name: _________________________________
-
-	(print)
-
-Title: __________________________________	Title: _________________________________
-
-Date: _________________________________	Date: _________________________________
-
-
-
- 
-
-ATTACHMENT A
-
-Provider Trademarks
-
-I. Trademarks: [list Provider’s licensed trademarks]
-
-II. Quality Standards: [list quality requirements for Value-Added Requirements]
-
-III. Trademark Usage Policy: [list Provider’s requirements for publication and other use of trademarks]
-
+Annex.Trademarks.=[G/Z/ol-II/3]
  
 ATTACHMENT B
 
-Licensed Software Support
+Annex.SoftwareSupport.Ti=Licensed Software Support
 
-[insert Provider support obligations]
+Annex.SoftwareSupport.sec=[insert Provider support obligations]
+
+Annex.SoftwareSupport.=[G/Z/ol/Base]
