--- a/Form/0.md
+++ b/Form/0.md
@@ -22,11 +22,11 @@ Please delete all text above the following dotted line, as well as the line itse
 
 Doc.Ti=Var Distribution License Agreement
 
-This.sec=This VAR Distribution License Agreement (this “Agreement”) is entered into as of {EffectiveDate.YMD} (the “Effective Date”) by and between {Provider.N,E,A} (“Provider”), and {Distributor.N,E,A} (“Distributor”).
+This.sec=This VAR Distribution License Agreement (this “Agreement”) is entered into as of {EffectiveDate.YMD} (the “Effective Date”) by and between {Provider.US.N,E,A} (“Provider”), and {Distributor.US.N,E,A} (“Distributor”).
 
 Why.Ti=RECITALS
 
-Why.sec=Provider provides a software application known as {SoftwareApplication.Name}, and the parties have agreed that Distributor will incorporate such software into its own product and distribute the combined product, operating as a “value-added reseller.”
+Why.sec=Provider provides a software application known as {LicensedSoftware.Name}, and the parties have agreed that Distributor will incorporate such software into its own product and distribute the combined product, operating as a “value-added reseller.”
 
 That.sec=Therefore, in consideration of the mutual covenants, terms, and conditions set forth below, including those outlined on Attachments A and B (which are incorporated into this Agreement by this reference), the adequacy of which consideration is hereby accepted and acknowledged, the parties agree as set forth below.
 
@@ -48,7 +48,7 @@ Sec=<center><b>TERMS AND CONDITIONS</b></center><br>{sec}
 
 1.6.sec=“Term” is defined in Section {13.1.Xnum} below.
 
-1.7.sec=“Value-Added Product” means Distributor’s {Value-AddedProduct.Name} product, as modified to incorporate the Licensed Software.
+1.7.sec=“Value-Added Product” means Distributor’s {LicensedSoftware.Name} product, as modified to incorporate the Licensed Software.
 
 1.8.sec=“Upgrade” means a new versions, updates, or upgrades of fthe Licensed Software, in object code format.
 
@@ -83,6 +83,8 @@ Sec=<center><b>TERMS AND CONDITIONS</b></center><br>{sec}
 2.5.Ti=Delivery & Identification
 
 2.5.sec=Provider shall provide the Licensed Software and Documentation to Distributor, through a reasonable system of electronic download,  {Software.WillBeAvailable.cl}. Distributor shall identify each Sub-Distributor and End-Customer to Provider in writing promptly after executing a license agreement with such person or entity, providing full legal name, physical address, telephone number, and e-mail address. 
+
+Software.WillBeAvailable.cl=within {Software.Available.days} of the Effective Date
 
 2.=[G/Z/ol/5]
 
@@ -254,9 +256,9 @@ Conf.Period.End.cl={Conf.Period.End.DaysAfterDisclosure.#} after the date of dis
 
 14.2.0.sec=Notices pursuant to this Agreement shall be sent to the addresses below, or to such others as either party may provide in writing. Such notices will be deemed received at such addresses upon the earlier of (a) actual receipt or (b) delivery in person, by fax with written confirmation of receipt, or by certified mail return receipt requested.
 
-14.2.1.sec=For Provider: {Provider.US.Notice.sec}
+14.2.1.sec=For Provider: {Provider.US.Notice.Block}
 
-14.2.2.sec=For Distributor: {Distributor.US.Notice.sec} 
+14.2.2.sec=For Distributor: {Distributor.US.Notice.Block} 
 
 14.2.=[G/Z/ol-a/s2]
 
@@ -328,11 +330,7 @@ Note=hyperlink cross references.
 
 =[G/Z/ol/14]
 
-
 By.0.sec=IN WITNESS THEREOF, the parties have executed this Agreement as of the Effective Date.
-
-
-
 
 Annex.Sec=<h3>Attachments</h3><br><h4>ATTACHMENT A</h4><br>{Annex.Trademarks.Sec}<h4>ATTACHMENT B</h4>{Annex.SoftwareSupport.Sec}
 
@@ -359,3 +357,16 @@ Annex.SoftwareSupport.Ti=Licensed Software Support
 Annex.SoftwareSupport.sec=[insert Provider support obligations]
 
 Annex.SoftwareSupport.=[G/Z/ol/Base]
+
+Dispute.Xnum={14.9.Xnum}
+
+2.3.1.Xnum={2.3.Xnum}(<a href="#2.3.1.sec" class="xref">a</a>)
+
+10.1.1.Xnum={10.1.Xnum}(<a href="#10.1.1.sec" class="xref">a</a>)
+
+10.1.2.Xnum={10.1.Xnum}(<a href="#10.1.2.sec" class="xref">b</a>)
+
+
+11.1.1.Xnum={11.1.Xnum}(<a href="#11.1.1.sec" class="xref">a</a>)
+
+11.1.5.Xnum={11.5.Xnum}(<a href="#11.1.sec" class="xref">e</a>)
